grist/not/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grist
  template:
    metadata:
      labels:
        app: grist
    spec:
      containers:
        - name: grist
          image: gristlabs/grist:1.7.17
          ports:
            - containerPort: 8484
          volumeMounts:
            - name: data-volume
              mountPath: /persist
              readOnly: false
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: grist-data-pvc
