grist/not/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grist-service
spec:
  selector:
    app: grist
  ports:
    - protocol: TCP
      port: 8484
      targetPort: 8484
