grist/not/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grist-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: grist.xyz.abc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grist-service
                port:
                  number: 8484
